# HereAssistant

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.ru.md  SECURITY.md  TZ.md  bot.py  chat.py  chat_commands.py  chat_identity.py  chat_renderer.py  chat_sessions.py  ecosystem.config.js  manage.py  manage_accounts.py  manage_actions.py  manage_audit.py  manage_config.py  manage_env.py  manage_header.py  manage_native.py  manage_process.py  manage_ui.py  manage_views.py  pyproject.toml  requirements.txt  restart_bot.py  start_bot.bat  terminal_input.py  terminal_title.py
cli/: README.md  package-lock.json  package.json  tsconfig.json
core/: access.py  agent_hooks.py  agent_memory.py  changes.py  config.py  contours.py  control.py  crm_sync.py  db.py  events.py  git_connections.py  git_oauth.py  git_projects.py  git_vault_client.py  herecrm_client.py  integration_state.py  launch_context.py  logging_setup.py  models.py  native_hooks.py  native_sessions.py  project_config.py  projects.py  rtk.py  secret_scan.py  version.py  workspace_status.py
docs/: INLINE_IMAGES_PLAN.md  account-project-isolation-audit.md  assistant-webapp-redesign.md  claude-implementation-tz.md  control-plane-hardening-plan.md  exception-audit.md  git-auth-and-mobile-webapp.md  git-auth-and-mobile-webapp.ru.md  git-binding-test.md  gpt-agent-audit.md  miniapp-tz.md  mobile-activity-proof.md  mobile-activity-proof.ru.md  monorepo-and-deploy.md  native-session-connector.md  native-session-connector.ru.md  onboarding.md  os-runners.md  performance-baseline.md  privacy.md  providers.md  python-hardening-plan.md  release-notes-0.4.0-hardening.md  rtk-canary-plan.md  ubuntu-pm2-nginx.md  unified-agent-runtime.md  unified-agent-runtime.ru.md  vscode-workbench.md  vscode-workbench.ru.md
handlers/: __init__.py  accounts.py  admin_claim.py  common.py  deploy.py  diff.py  message_attachments.py  message_buffer.py  message_final.py  message_final_delivery.py  message_formatting.py  message_live.py  message_progress.py  message_progress_delivery.py  message_rich_final.py  message_state.py  messages.py  models.py  onboarding.py  projects.py  repo.py  stats.py  system.py  team.py
providers/: __init__.py  base.py  claude_code.py  codex.py  gemini.py  models.py  os_runner.py  process.py  qwen_code.py
runner/: __init__.py  entrypoint.py  git_credential_proxy.py  git_vault_admin.py  git_vault_service.py
scripts/: benchmark_baseline.py  bootstrap_ubuntu.sh  check_exception_ratchet.py  check_git_broker_canary.sh  check_repository_hygiene.py  check_runtime.sh  deploy.py  import_claude_memory.py  install_os_runner.sh  link_claude_memory.py  native_connector.py  package_vscode_extension.py  publish-openvsx.sh  publish-vsce.sh  (+3 more)
(+198 files in other folders)
